Removed getSingleByParent methods from milestone and factor -related functionality.
