# src/routes/milestone-route.js
@@ -4,10 +4,10 @@ import { factorController } from '../controllers/factor-controller';
 
 const router = Router();
 
+router.get('/:milestoneId', milestoneController.getSingle);
 router.put('/:milestoneId', milestoneController.update);
 router.delete('/:milestoneId', milestoneController.remove);
 router.post('/:milestoneId/factors', factorController.create);
 router.get('/:milestoneId/factors', factorController.getAllByParent);
-router.get('/:milestoneId/factors/:factorId', factorController.getSingleByParent);
 
 export default router;
